Fix tab line not showing with stock theme when custom color applied
Fixing this for new screenshots, not going to push hotfix for this

--- a/browser/themes/shared/r3dfox.css
+++ b/browser/themes/shared/r3dfox.css
@@ -40,6 +40,7 @@
     --toolbarbutton-icon-fill-attention: light-dark(rgb(255, 20, 20), rgb(255, 80, 80)) !important;
     --download-progress-fill-color: light-dark(rgb(255, 40, 40), rgb(255, 80, 80)) !important;
     --lwt-tab-line-color: light-dark(rgb(255, 40, 40), rgb(255, 80, 80)) !important;
+    --tab-selected-outline-color: var(--lwt-tab-line-color, currentColor) !important;
     @media (-moz-content-prefers-color-scheme: dark), (prefers-color-scheme: dark) {
       --color-accent-primary: rgb(255, 60, 60) !important;
       --color-accent-primary-hover: rgb(255, 80, 80) !important;
@@ -97,6 +98,7 @@
     --toolbarbutton-icon-fill-attention: light-dark(rgb(255, 71, 9), rgb(255, 118, 72)) !important;
     --download-progress-fill-color: light-dark(rgb(255, 86, 30), rgb(255, 118, 72)) !important;
     --lwt-tab-line-color: light-dark(rgb(255, 86, 30), rgb(255, 118, 72)) !important;
+    --tab-selected-outline-color: var(--lwt-tab-line-color, currentColor) !important;
     &[privatebrowsingmode=temporary] {
       --lwt-tab-line-color: light-dark(rgb(255, 40, 40), rgb(255, 80, 80)) !important;
     }
@@ -157,6 +159,7 @@
     --toolbarbutton-icon-fill-attention: light-dark(rgb(255, 20, 196), rgb(255, 80, 211)) !important;
     --download-progress-fill-color: light-dark(rgb(255, 40, 201), rgb(255, 80, 211)) !important;
     --lwt-tab-line-color: light-dark(rgb(255, 40, 201), rgb(255, 80, 211)) !important;
+    --tab-selected-outline-color: var(--lwt-tab-line-color, currentColor) !important;
     &[privatebrowsingmode=temporary] {
       --lwt-tab-line-color: light-dark(rgb(255, 40, 40), rgb(255, 80, 80)) !important;
     }
@@ -217,6 +220,7 @@
     --toolbarbutton-icon-fill-attention: light-dark(rgb(185, 103, 229), rgb(185, 103, 229)) !important;
     --download-progress-fill-color: light-dark(rgb(165, 0, 255), rgb(185, 103, 229)) !important;
     --lwt-tab-line-color: light-dark(rgb(165, 0, 255), rgb(156, 87, 193)) !important;
+    --tab-selected-outline-color: var(--lwt-tab-line-color, currentColor) !important;
     &[privatebrowsingmode=temporary] {
       --lwt-tab-line-color: light-dark(rgb(255, 40, 40), rgb(255, 80, 80)) !important;
     }
